<resources>
    <string name="app_name">My ApplicationAS3</string>
    <string name="add_entry">Add Entry</string>
    <string name="no_entries">No Entries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="repeat">Repeat?</string>
    <string name="never">Never</string>
    <string name="add_event">Add Event</string>
    <string name="repeatText">How often to repeat?</string>
    <string name="toastText">Please enter the relevant data</string>
</resources>