<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/event_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/editTextDate2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/event_date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/repeatButton"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:text="@string/repeat" />

            <TextView
                android:id="@+id/repeatOptionText"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:text="@string/never" />

            <Button
                android:id="@+id/addEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_event" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>